--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,28 +10,10 @@
 	<!-- INPUT DATE AND PRICE LABEL-->
 	<ion-item>
 		<ion-label class="date-label">Fecha</ion-label>
-		<ion-datetime  id ="datepicker" displayFormat="" pickerFormat=""></ion-datetime>
+		<ion-datetime  id ="datepicker" displayFormat="DD MM YYYY" pickerFormat="DD MM YYYY" [(ngModel)]="date" (ionChange)="onChangeDate()"></ion-datetime>
 	</ion-item>
-	<ion-label><strong id="ufValue" >Valor UF :</strong></ion-label>
+	<ion-label><strong>Valor UF :${{value}}</strong></ion-label>
 	<!-- INPUT AND PRICE LABEL END-->
-
-	<!-- CALCULATOR CARD-->
-	<ion-card>
-		<ion-card-header text-center padding-bottom>
-			Calculadora fórmula UF a pesos
-		</ion-card-header>
-		<ion-list>
-			<ion-item>
-				<ion-input id="ufInput" [(ngModel)]="pesos" type="tel" placeholder="0"></ion-input>
-			</ion-item>
-		</ion-list>
-		<ion-list>
-			<ion-item>
-				$ {{pesos}}
-			</ion-item>
-		</ion-list>
-	</ion-card>
-	<!-- CARD END -->
 
 	<!-- UF TO PESOS CARD-->
 	<ion-card>
@@ -40,12 +22,12 @@
 		</ion-card-header>
 		<ion-list >
 			<ion-item>
-				<ion-input type="tel" placeholder="0"></ion-input>
+				<ion-input type="tel" placeholder="0" [(ngModel)]="ufto" (ionChange)="setUfToPesos()"></ion-input>
 			</ion-item>
 		</ion-list>
 		<ion-list>
 			<ion-item>
-				Results
+				Results :
 			</ion-item>
 		</ion-list>
 	</ion-card>
@@ -58,7 +40,7 @@
 		</ion-card-header>
 		<ion-list>
 			<ion-item>
-				<ion-input type="tel" placeholder="0"></ion-input>
+				<ion-input type="tel" placeholder="0" [(ngModel)]="clpto" (ionChange)="setPesosToUF()"></ion-input>
 			</ion-item>
 		</ion-list>
 		<ion-list>
