--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,12 +22,12 @@
 		</ion-card-header>
 		<ion-list >
 			<ion-item>
-				<ion-input type="tel" placeholder="0" [(ngModel)]="ufto" (ionChange)="setUfToPesos()"></ion-input>
+				<ion-input type="tel" placeholder="0" [(ngModel)]="ufto" (keyup)="setUfToPesos($event)"></ion-input>
 			</ion-item>
 		</ion-list>
 		<ion-list>
 			<ion-item>
-				Results :
+				CLP : ${{clp}}
 			</ion-item>
 		</ion-list>
 	</ion-card>
@@ -40,12 +40,12 @@
 		</ion-card-header>
 		<ion-list>
 			<ion-item>
-				<ion-input type="tel" placeholder="0" [(ngModel)]="clpto" (ionChange)="setPesosToUF()"></ion-input>
+				<ion-input type="tel" placeholder="0" [(ngModel)]="clpto" (keyup)="setPesosToUF($event)"></ion-input>
 			</ion-item>
 		</ion-list>
 		<ion-list>
 			<ion-item>
-				Results
+				UF : {{uf}}
 			</ion-item>
 		</ion-list>
 	</ion-card>
